# ragfolio

./: .gitignore  README.md  dev_doc.txt  one-line-prerequisites-installer.ps1  one-line-prerequisites-installer.sh  render-build.sh  requirements.txt
backend/: README.md  main.py  pyproject.toml  rag_query.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BackendStatus.tsx
frontend/src/components/chatbot/: ChatInput.tsx  ChatMessage.tsx  Chatbot.tsx
frontend/src/components/portfolio/: About.tsx  Education.tsx  Experience.tsx  Footer.tsx  Header.tsx  Hero.tsx  Projects.tsx  Skills.tsx
prompts/: step_2_process-resume.md  step_4_backend-controller.md  step_5_frontend-api-integration.md
rag/: create-embeddings.py  pyproject.toml
rag/input-data/: me.md  resume.md
